# serialcxx

./: .gitignore  CMakeLists.txt
cmake/: corrosion_cxx.cmake  findUdev.cmake
src/: CMakeLists.txt  main.cpp
src/serialcxx/: Cargo.toml  build.rs
src/serialcxx/src/: bindgenffi.rs  lib.rs  serial.rs  serial_ext.rs
