[package]
name = "serialcxx"
version = "0.1.0"
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
edition = "2021"

[dependencies]
cxx = "1.0"
serialport = { version = "4.0" }
cancellation = "0.1.0"

[build-dependencies]
cxx-build = "1.0"
cbindgen = "0.20.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"
#lto = "thin"

[profile.dev]
panic = "abort"
