[package]
name = "serialcxx"
version = "0.1.0"
authors = ["Andrew Ealovega <Andrew@Ealovega.dev>"]
edition = "2021"

[dependencies]
cxx = "1.0"
serialport = { version = "4.0" }
cancellation = "0.1.0"
parking_lot = "0.12"

log = "0.4.14"

[build-dependencies]
cxx-build = "1.0"
cbindgen = "0.20.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
strip = true

[profile.dev]
panic = "abort"
